# Multi_Speaker_Transcriber

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml
docs/plans/: 2026-05-23-overlap-attribution-fixes.md
docs/superpowers/plans/: 2026-05-18-phase1-foundation.md  2026-05-18-phase2-denoise.md  2026-05-18-phase3-diarization.md  2026-05-18-phase4-separation.md  2026-05-20-phase1-diarizer-matcher-upgrade.md  2026-05-21-dual-asr-backend.md  2026-05-21-qwen3-asr-integration.md  2026-05-22-overlap-word-attribution.md  2026-05-22-subtitle-segmentation-multitpass.md  2026-05-24-whisper-asr-backend.md
docs/superpowers/specs/: 2026-05-18-audio-transcription-pipeline-design.md  2026-05-19-clearvoice-integration-design.md  2026-05-21-dual-asr-backend-design.md  2026-05-21-qwen3-asr-integration-design.md  2026-05-22-overlap-word-attribution-design.md  2026-05-22-subtitle-segmentation-design.md  2026-05-24-whisper-asr-backend-design.md  2026-05-24-whisper-backend-design.md
hotwords/: example.txt
tests/: test_asr.py  test_attribution.py  test_audio_extractor.py  test_config.py  test_denoiser.py  test_diarizer.py  test_extractor.py  test_matcher.py  test_overlap_replacement.py  test_pipeline_basic.py  test_pipeline_full.py  test_qwen3_asr.py  test_segmentation.py  test_separator.py  test_srt_writer.py  test_types.py  test_whisper.py
transcribe/: __main__.py  cli.py  config.py  constants.py  pipeline.py
transcribe/data/: types.py
transcribe/models/: asr.py  audio_extractor.py  denoiser.py  diarizer.py  extractor.py  matcher.py  rocm_compat.py  segmentation.py  separator.py  srt_writer.py
transcribe/models/asr/: __init__.py  base.py  factory.py  funasr_nano.py  funasr_paraformer.py  paraformer.py  qwen3_asr.py  utils.py  whisper.py
transcribe/models/attribution/: __init__.py  engine.py  overlap.py  strategy.py
