[project]
name = "multi-speaker-transcribe"
version = "0.1.0"
description = "Offline multi-speaker audio transcription pipeline for Chinese Mandarin"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "rich",
    "soundfile",
]

[project.optional-dependencies]
asr = [
    "funasr @ git+https://github.com/modelscope/FunASR.git@2ca745e5d11ad9650b94691d0d346d1435dc9b63",
    "modelscope",
    "tiktoken",
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers",
]
diarize = [
    "addict",
    "modelscope",
    "pyannote.audio>=4.0",
    "scipy",
    "simplejson",
]
all = [
    "multi-speaker-transcribe[asr,diarize]",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
transcribe = "transcribe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["transcribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (requires model downloads)",
]
